<resources>
    <string name="app_name">MathForKids</string>
    <string name="button_start">Start</string>
    <string name="button_score">Score</string>
    <string name="button_ach">Achievements</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="versionNumber">Version %s</string>
    <string name="authors">MathForKids is created by\n\n
    Chris Rabe\n
    Dean Ong\n
    Janice Chin\n
    Megan Liang</string>
    <string name="difficultyError">Must have a difficulty selected</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
