<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuGrid"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@drawable/kids"
    android:rowCount="7"
    android:columnCount="4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.welovekids.mathforkids.MainActivity">
    <!--<TextView android:id="@+id/start"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="0" />-->
    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--/>-->

    <Button
        android:id="@+id/start"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        />
    <Button
        android:id="@+id/score"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_score"
        />
    <Button
        android:id="@+id/achieve"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ach"
        />
    <Button
        android:id="@+id/settings"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        />
    <Button
        android:id="@+id/about"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        />



    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_row="6"
        android:layout_column="2" />-->

   <!-- <MediaController
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mediaController3"
        android:layout_row="5"
        android:layout_column="3" />-->
</GridLayout>
